force-app/main/default/objects/Account/fields/Boost_Volume__c.field-meta.xml
<CustomField>
    <fullName>Boost_Volume__c</fullName>
    <description>RO-2858 — LEGACY. Replaced by Partner_Kickback_Threshold_2__c. Do not use.</description>
    <formula>Framework_Opportunity_Group__r.Framework_Opportunity__r.Boost_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The volume we defined in order to motivate the partner, from this value onwards the boost AE will apply</inlineHelpText>
    <label>Legacy - Boost Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>