force-app/main/default/objects/Account/fields/bPrioAccount__c.field-meta.xml
<CustomField>
    <fullName>bPrioAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prio Account</label>
    <type>Checkbox</type>
</CustomField>