force-app/main/default/objects/Account/fields/bReferenceallowed__c.field-meta.xml
<CustomField>
    <fullName>bReferenceallowed__c</fullName>
    <inlineHelpText>Zeigt, ob der Account damit einverstanden ist, als Referenzkund*in genannt zu werden.</inlineHelpText>
    <label>Reference allowed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>