force-app/main/default/objects/Account/fields/Budget_availability_next_quarter_year__c.field-meta.xml
<CustomField>
    <fullName>Budget_availability_next_quarter_year__c</fullName>
    <description>RO-2315</description>
    <inlineHelpText>Welches ist das nächste Quartal, in dem Budget für die Personalbeschaffung zur Verfügung steht?
Dieses Feld zeigt an, welches das nächste Quartal ist, in dem potenzielle Kund*innen Budget für die Personalbeschaffung zur Verfügung haben. Es dient der Finanzplanung und strategischen Budgetverteilung.</inlineHelpText>
    <label>Budget availability next quarter/year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q2 / 2024</fullName>
            </value>
            <value>
                <fullName>Q3 / 2024</fullName>
            </value>
            <value>
                <fullName>Q4 / 2024</fullName>
            </value>
            <value>
                <fullName>Q1 / 2025</fullName>
            </value>
            <value>
                <fullName>Q2 / 2025</fullName>
            </value>
            <value>
                <fullName>Q3 / 2025</fullName>
            </value>
            <value>
                <fullName>Q4 / 2025</fullName>
            </value>
            <value>
                <fullName>Q1 / 2026</fullName>
            </value>
            <value>
                <fullName>Q2 / 2026</fullName>
            </value>
            <value>
                <fullName>Q3 / 2026</fullName>
            </value>
            <value>
                <fullName>Q4 / 2026</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>