force-app/main/default/objects/Account/fields/Budget_Categories__c.field-meta.xml
<CustomField>
    <fullName>Budget_Categories__c</fullName>
    <description>RO - 1631</description>
    <label>Budget Categories</label>
    <length>50</length>
    <type>Text</type>
</CustomField>