force-app/main/default/objects/Account/fields/Budget_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Expiration_Date__c</fullName>
    <label>Budget Expiration Date</label>
    <type>Date</type>
</CustomField>