force-app/main/default/objects/Account/fields/Budget_Type__c.field-meta.xml
<CustomField>
    <fullName>Budget_Type__c</fullName>
    <description>RO - 1631</description>
    <label>Budget Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Budgets</fullName>
            </value>
            <value>
                <fullName>Budget Categories</fullName>
            </value>
            <value>
                <fullName>Standard Prices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>