force-app/main/default/objects/Account/fields/Bulk_Invoice_Useage__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Invoice_Useage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-2858 — Renamed from &quot;Bulk Invoice Usage&quot;. Indicates if the Account uses Bulk Invoicing.</description>
    <inlineHelpText>Zeigt an, ob der Account &quot;Bulk Invoicing&quot; verwendet. (Ausschließlich für Agency möglich)</inlineHelpText>
    <label>Partner Bulk Invoice</label>
    <type>Checkbox</type>
</CustomField>