force-app/main/default/objects/Account/fields/bVoucherCampaign__c.field-meta.xml
<CustomField>
    <fullName>bVoucherCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voucher Campaign</label>
    <type>Checkbox</type>
</CustomField>