force-app/main/default/objects/Account/fields/Category_3__c.field-meta.xml
<CustomField>
    <fullName>Category_3__c</fullName>
    <label>Category 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertising Agencies</fullName>
            </value>
            <value>
                <fullName>Advertising sales</fullName>
            </value>
            <value>
                <fullName>Agricultural Engineering</fullName>
            </value>
            <value>
                <fullName>Agricultural Machinery</fullName>
            </value>
            <value>
                <fullName>Aircraft manufacturers</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Airports</fullName>
            </value>
            <value>
                <fullName>Aluminum Plants</fullName>
            </value>
            <value>
                <fullName>Animal Feed</fullName>
            </value>
            <value>
                <fullName>Animal Hospitals</fullName>
            </value>
            <value>
                <fullName>Animal Shelters</fullName>
            </value>
            <value>
                <fullName>Architects</fullName>
            </value>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>Auditors</fullName>
            </value>
            <value>
                <fullName>Car manufacturers</fullName>
            </value>
            <value>
                <fullName>Car Service</fullName>
            </value>
            <value>
                <fullName>Car Suppliers</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Basic Chemicals</fullName>
            </value>
            <value>
                <fullName>Basketball Teams</fullName>
            </value>
            <value>
                <fullName>Bedroom Stores</fullName>
            </value>
            <value>
                <fullName>Beverage Industry</fullName>
            </value>
            <value>
                <fullName>Bicycle Manufacturer</fullName>
            </value>
            <value>
                <fullName>Book Publishers</fullName>
            </value>
            <value>
                <fullName>Bookstore</fullName>
            </value>
            <value>
                <fullName>Bowling Center</fullName>
            </value>
            <value>
                <fullName>Brewery</fullName>
            </value>
            <value>
                <fullName>Bread Factories</fullName>
            </value>
            <value>
                <fullName>Breweries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>