force-app/main/default/objects/Account/fields/CbC_Reference_Clients__c.field-meta.xml
<CustomField>
    <fullName>CbC_Reference_Clients__c</fullName>
    <description>Manually uploaded reference clients used to address city by city accounts. Uploaded 16.08.2021. Ticket RO-536.</description>
    <inlineHelpText>Local reference clients for the City by City Initiative.</inlineHelpText>
    <label>Legacy CbC Reference Clients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>