force-app/main/default/objects/Account/fields/Challenging_roles_departments__c.field-meta.xml
<CustomField>
    <fullName>Challenging_roles_departments__c</fullName>
    <description>RO-2315</description>
    <inlineHelpText>Welche spezifischen Rollen oder Abteilungen sind am schwierigsten zu rekrutieren?</inlineHelpText>
    <label>Challenging roles &amp; departments</label>
    <type>TextArea</type>
</CustomField>