force-app/main/default/objects/Account/fields/Company_Website_Jobs_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Company_Website_Jobs_Hierarchy__c</fullName>
    <inlineHelpText>Gesamtanzahl der von diesem Unternehmen und allen Unternehmen in seiner Hierarchie auf der Unternehmenswebsite veröffentlichten Stellen</inlineHelpText>
    <label>Company Website Jobs (Hierarchy)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>