force-app/main/default/objects/Account/fields/Company_Website_Jobs_Self__c.field-meta.xml
<CustomField>
    <fullName>Company_Website_Jobs_Self__c</fullName>
    <inlineHelpText>Gesamtanzahl der von diesem Unternehmen auf der Unternehmenswebsite veröffentlichten Stellen</inlineHelpText>
    <label>Company Website Jobs (Self)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>