force-app/main/default/objects/Account/fields/Competitor_2_current_future__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2_current_future__c</fullName>
    <description>RO-2315</description>
    <inlineHelpText>Welche Rekrutierungslösungen werden derzeit eingesetzt oder für die Zukunft in Betracht gezogen?
Erfasst die Rekrutierungslösungen, die von potenziellen Kunden derzeit genutzt werden oder in der Zukunft in Betracht gezogen werden.</inlineHelpText>
    <label>Competitor 2: current &amp; future</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>