force-app/main/default/objects/Account/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <inlineHelpText>With the contact email our team can contact via client for questions or to generate a sale</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>