force-app/main/default/objects/Account/fields/Converted_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_ID__c</fullName>
    <description>Stores lead ID if a lead converted into the account.</description>
    <inlineHelpText>Stores lead ID if a lead converted into the account.</inlineHelpText>
    <label>Converted Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>