force-app/main/default/objects/Account/fields/Cornerstone_Jobreferenznummer_account__c.field-meta.xml
<CustomField>
    <fullName>Cornerstone_Jobreferenznummer_account__c</fullName>
    <description>https://heyjobs.atlassian.net/browse/RO-2469</description>
    <label>Legacy Cornerstone Jobreferenznummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>