force-app/main/default/objects/Account/fields/CreFo_ID__c.field-meta.xml
<CustomField>
    <fullName>CreFo_ID__c</fullName>
    <description>RO-1339</description>
    <label>Legacy CreFo ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>