force-app/main/default/objects/Account/fields/curAnnualBudget2018__c.field-meta.xml
<CustomField>
    <fullName>curAnnualBudget2018__c</fullName>
    <label>Legacy Annual Budget 2018</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>