force-app/main/default/objects/Account/fields/Current_Channel_Andere__c.field-meta.xml
<CustomField>
    <fullName>Current_Channel_Andere__c</fullName>
    <label>Legacy Current Channel Andere</label>
    <length>255</length>
    <type>Text</type>
</CustomField>