force-app/main/default/objects/Account/fields/Current_contract_until__c.field-meta.xml
<CustomField>
    <fullName>Current_contract_until__c</fullName>
    <description>RO-2858 — LEGACY. Replaced by Partner_Contract_End_Date__c. Do not use.</description>
    <formula>Framework_Opportunity_Group__r.Framework_Opportunity__r.Contract_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Current Contract Until</label>
    <type>Date</type>
</CustomField>