force-app/main/default/objects/Account/fields/Customer_360__c.field-meta.xml
<CustomField>
    <fullName>Customer_360__c</fullName>
    <description>RO - 2570</description>
    <formula>HYPERLINK(
    &quot;https://mkt-admin-app.production.heyjobs.de/app/customer-360/customer360-67fe6e3408c30476df45470a?accountId=&quot; &amp; 
    CASESAFEID(Id),
    &quot;Customer 360&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contains the link to the account view in AppSmith.</inlineHelpText>
    <label>Legacy Customer 360</label>
    <type>Text</type>
</CustomField>