force-app/main/default/objects/Account/fields/Customer_Conversion_MQL_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Conversion_MQL_Type__c</fullName>
    <description>MQL Type Account when Account becomes a Customer. Populated via Flow</description>
    <inlineHelpText>&quot;Bester&quot; MQL Type aller verknüpften Kontakte, zu dem Zeitpunkt, als der Account ein Kunde wurde.</inlineHelpText>
    <label>Customer Conversion MQL Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>