force-app/main/default/objects/Account/fields/dateInitialGoLive__c.field-meta.xml
<CustomField>
    <fullName>dateInitialGoLive__c</fullName>
    <inlineHelpText>When the related Job went live</inlineHelpText>
    <label>Initial Go-Live</label>
    <type>Date</type>
</CustomField>