force-app/main/default/objects/Account/fields/Days_left_in_current_contract__c.field-meta.xml
<CustomField>
    <fullName>Days_left_in_current_contract__c</fullName>
    <description>RO-2858 — LEGACY. Replaced by Partner_Days_Left_In_Contract__c. Do not use.</description>
    <formula>Current_contract_until__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Days Left in Current Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>