force-app/main/default/objects/Account/fields/Days_Since_Last_Booking__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Booking__c</fullName>
    <formula>TODAY() -  Last_Booking_Generated_Date_Hierarchy__c</formula>
    <label>Days Since Last Booking Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>