force-app/main/default/objects/Account/fields/Days_since_Last_Booking_Child__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Last_Booking_Child__c</fullName>
    <description>RO - 2794</description>
    <formula>TODAY() -  Last_Booking_Generated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Last Booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>