force-app/main/default/objects/Account/fields/Days_Since_Last_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Revenue__c</fullName>
    <formula>IF (TODAY() - Last_Revenue_Generated__c &lt;0 ,0,(TODAY() - Last_Revenue_Generated__c))</formula>
    <label>Days Since Last Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>