force-app/main/default/objects/Account/fields/Days_Until_Churn__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Churn__c</fullName>
    <description>RO-2840:180 minus the number of days since the last contract end date. Positive = days before churn. Negative = days past 180-day churn threshold. Blank = no contract end date.</description>
    <formula>IF(
  ISBLANK(Last_Contract_End_Date__c),
  NULL,
  180 - (TODAY() - Last_Contract_End_Date__c)
)</formula>
    <inlineHelpText>Verbleibende Tage bis dieser Account die 180-Tage-Churn-Schwelle erreicht. Negativ = Schwelle bereits überschritten.</inlineHelpText>
    <label>Days Until Churn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>