force-app/main/default/objects/Account/fields/Dealfront_ID_Accont__c.field-meta.xml
<CustomField>
    <fullName>Dealfront_ID_Accont__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used to identify records from dealfront</description>
    <externalId>true</externalId>
    <label>Legacy Dealfront ID (Account)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>