force-app/main/default/objects/Account/fields/Decision_maker_name__c.field-meta.xml
<CustomField>
    <fullName>Decision_maker_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO-2315</description>
    <inlineHelpText>Wer hat das letzte Wort bei der Entscheidung über Rekrutierungsstrategien innerhalb der Organisation?</inlineHelpText>
    <label>Decision maker name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Decision maker name)</relationshipLabel>
    <relationshipName>Accounts_DecisionMaker</relationshipName>
    <type>Lookup</type>
</CustomField>