force-app/main/default/objects/Account/fields/Decision_making__c.field-meta.xml
<CustomField>
    <fullName>Decision_making__c</fullName>
    <inlineHelpText>This field is not used anymore. Please use &quot;Purchase Decision Behavior&quot; instead.</inlineHelpText>
    <label>Legacy - Decision making</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Decentral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>