force-app/main/default/objects/Account/fields/Description_c__c.field-meta.xml
<CustomField>
    <fullName>Description_c__c</fullName>
    <description>Is used to generate Account Description on Account Lighning Page</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>