force-app/main/default/objects/Account/fields/Direct_Mail_Code__c.field-meta.xml
<CustomField>
    <fullName>Direct_Mail_Code__c</fullName>
    <description>Direct mail code assigned by marketing.RO-486</description>
    <inlineHelpText>Direct mail code assigned by marketing.</inlineHelpText>
    <label>Legacy Direct Mail Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>