force-app/main/default/objects/Account/fields/Disqualification_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Outcome__c</fullName>
    <description>Stores the CMDT-defined outcome (Release or Permanent_Loss) at disqualification time. Used by the Account_Disqualification_Approved RTF for routing.</description>
    <label>Disqualification Outcome</label>
    <length>20</length>
    <type>Text</type>
</CustomField>