force-app/main/default/objects/Account/fields/dJobslive__c.field-meta.xml
<CustomField>
    <fullName>dJobslive__c</fullName>
    <description>Number of jobs the company had live on the job feed update date. All platforms, not necessarily including Heyjobs.</description>
    <inlineHelpText>Anzahl der Stellen, die das Unternehmen am &quot;job feed update date&quot; live hatte. Alle Plattformen, nicht unbedingt einschließlich HeyJobs.</inlineHelpText>
    <label>Legacy Jobs live - Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>