force-app/main/default/objects/Account/fields/dNPS120__c.field-meta.xml
<CustomField>
    <fullName>dNPS120__c</fullName>
    <label>Legacy - NPS 120</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>