force-app/main/default/objects/Account/fields/dNPS360_del__c.field-meta.xml
<CustomField>
    <fullName>dNPS360_del__c</fullName>
    <label>Legacy - NPS 360</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>