force-app/main/default/objects/Account/fields/dNPS60__c.field-meta.xml
<CustomField>
    <fullName>dNPS60__c</fullName>
    <label>Legacy - NPS 60</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>