force-app/main/default/objects/Account/fields/dNPS__c.field-meta.xml
<CustomField>
    <fullName>dNPS__c</fullName>
    <description>Shows the latest NPS score that the customer filled.</description>
    <inlineHelpText>Zeigt die neuesten NPS, den Kund*innen im Recruiter-Portal ausgefüllt haben.</inlineHelpText>
    <label>NPS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>