force-app/main/default/objects/Account/fields/Domain_Match_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Domain_Match_on_Account__c</fullName>
    <label>Domain Match on Account</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>