force-app/main/default/objects/Account/fields/dPerformance120__c.field-meta.xml
<CustomField>
    <fullName>dPerformance120__c</fullName>
    <label>Legacy - Performance 120</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>