force-app/main/default/objects/Account/fields/dPerformance20__c.field-meta.xml
<CustomField>
    <fullName>dPerformance20__c</fullName>
    <label>Legacy - Performance 20</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>