force-app/main/default/objects/Account/fields/dPerformance360__c.field-meta.xml
<CustomField>
    <fullName>dPerformance360__c</fullName>
    <label>Legacy - Performance 360</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>