force-app/main/default/objects/Account/fields/dService120__c.field-meta.xml
<CustomField>
    <fullName>dService120__c</fullName>
    <label>Legacy - Service 120</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>