force-app/main/default/objects/Account/fields/dService20__c.field-meta.xml
<CustomField>
    <fullName>dService20__c</fullName>
    <label>Legacy - Service 20</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>