force-app/main/default/objects/Account/fields/dService360__c.field-meta.xml
<CustomField>
    <fullName>dService360__c</fullName>
    <label>Legacy - Service 360</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>