force-app/main/default/objects/Account/fields/Dunning_Email__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Email__c</fullName>
    <description>Used by Finance. RO-480</description>
    <inlineHelpText>Used by Finance.</inlineHelpText>
    <label>Dunning Email</label>
    <type>Email</type>
</CustomField>