force-app/main/default/objects/Account/fields/Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Duplicate Account Lookup field as defined in the Account Loss Process.</description>
    <inlineHelpText>Duplicate Account Lookup field as defined in the Account Loss Process.</inlineHelpText>
    <label>Duplicate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Duplicate Account)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>