force-app/main/default/objects/Account/fields/Elva_Status__c.field-meta.xml
<CustomField>
    <fullName>Elva_Status__c</fullName>
    <description>Should be a temporary field to track what ML and Clayground are doing with contacts that are also in our database.</description>
    <label>Elva Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be contacted</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Handover to Heyjobs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>