force-app/main/default/objects/Account/fields/Estimated_Max_Booking_this_quarter__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Max_Booking_this_quarter__c</fullName>
    <description>RO-2433</description>
    <inlineHelpText>Maximale Schätzung der Bookings, die in diesem Quartal durch aggressive Wachstumsstrategien erreicht werden könnten.</inlineHelpText>
    <label>Estimated Max. Booking (this quarter)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>