force-app/main/default/objects/Account/fields/Estimated_Min_Booking_this_quarter__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Min_Booking_this_quarter__c</fullName>
    <description>RO-2433</description>
    <inlineHelpText>Konservativste Schätzung der Bookings, die du in diesem Quartal von deinen KundInnen erwartest. Diese Zahl sollte das untere Ende deiner Umsatzprognosen darstellen.</inlineHelpText>
    <label>Estimated Min. Booking (this quarter)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>