force-app/main/default/objects/Account/fields/Estimated_Target_Booking_this_quarter__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Target_Booking_this_quarter__c</fullName>
    <description>RO-2433</description>
    <inlineHelpText>Realistisches Ziel für die Bookings in diesem Quartal. Diese Zahl repräsentiert deine angestrebte Zielsetzung.</inlineHelpText>
    <label>Estimated Target Booking (this quarter)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>